[feat] AIResult 일정 저장/조회/삭제 기능 및 RDS 연동 완료